# patterns

./: .clang-format  CMakeLists.txt  README.md  smart-clang-format.sh
abstract_factory/: CMakeLists.txt
abstract_factory/src/: main.cpp  pattern.cpp  pattern.hpp
builder/: CMakeLists.txt
builder/src/: main.cpp  pattern.cpp
common/: CMakeLists.txt
common/include/: platform.hpp  shapes.hpp  square.hpp  unix.hpp  windows.hpp
common/src/: platform.cpp  shapes.cpp  square.cpp  unix.cpp  windows.cpp
factory_method/: CMakeLists.txt
factory_method/src/: main.cpp  pattern.cpp
patterns/: CMakeLists.txt
patterns/abstract_factory/: CMakeLists.txt
patterns/abstract_factory/src/: main.cpp  pattern.cpp
patterns/builder/: CMakeLists.txt
patterns/builder/src/: main.cpp  pattern.cpp  pattern.hpp
patterns/creational/: CMakeLists.txt
patterns/creational/abstract_factory/: CMakeLists.txt
patterns/creational/abstract_factory/src/: main.cpp  pattern.cpp  pattern.hpp
patterns/creational/builder/: CMakeLists.txt
patterns/creational/builder/src/: main.cpp  pattern.cpp  pattern.hpp
patterns/creational/factory_method/: CMakeLists.txt
patterns/creational/factory_method/src/: main.cpp  pattern.cpp
patterns/creational/prototype/: CMakeLists.txt
patterns/creational/prototype/src/: main.cpp  pattern.cpp
patterns/creational/singleton/: CMakeLists.txt
patterns/creational/singleton/src/: main.cpp  pattern.cpp  pattern.hpp
patterns/factory_method/: CMakeLists.txt
patterns/factory_method/src/: main.cpp  pattern.cpp  pattern.hpp
patterns/prototype/src/: pattern.hpp
patterns/singleton/: CMakeLists.txt
patterns/singleton/src/: pattern.cpp  pattern.hpp
patterns/structural/adapter/: CMakeLists.txt
patterns/structural/adapter/src/: main.cpp  pattern.cpp  pattern.hpp
patterns/structural/bridge/: CMakeLists.txt
patterns/structural/bridge/src/: main.cpp  pattern.cpp  pattern.hpp
patterns/structural/composite/: CMakeLists.txt
patterns/structural/composite/src/: main.cpp  pattern.cpp  pattern.hpp
patterns/structural/decorator/: CMakeLists.txt
patterns/structural/decorator/src/: main.cpp  pattern.cpp  pattern.hpp
patterns/structural/facade/: CMakeLists.txt
patterns/structural/facade/src/: main.cpp  pattern.cpp  pattern.hpp
patterns/structural/flyweight/: CMakeLists.txt
patterns/structural/flyweight/src/: main.cpp  pattern.cpp  pattern.hpp
patterns/structural/proxy/: CMakeLists.txt
patterns/structural/proxy/src/: main.cpp  pattern.cpp  pattern.hpp
prototype/: CMakeLists.txt
prototype/src/: main.cpp  pattern.cpp
src/: main.cpp
src/abstract_factory/: pattern.cpp
src/common/: square.cpp
src/factory_method/: method.cpp  pattern.cpp  pattern.hpp
